feat: adiciona configuracao do docker e docker-compose